# b2

./: .gitignore  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Doxyfile  README.md  WINDOWS_README.md  b2.sublime-project  docker-compose.yml  environment-win.yml  environment.yml  environment_macos_20260331.yml  pyproject.toml
core/: .gitignore  CMakeLists.txt  README.md
core/doc/: bertini.doxy.config
core/include/bertini2/: bertini.hpp  classic.hpp  double_extensions.hpp  eigen_extensions.hpp  endgames.hpp  forbid_mixed_arithmetic.hpp  function_tree.hpp  have_bertini.hpp  logging.hpp  mpfr_complex.hpp  mpfr_extensions.hpp  num_traits.hpp  parallel.hpp  random.hpp  system.hpp  tracking.hpp
core/include/bertini2/blackbox/: algorithm_builder.hpp  argc_argv.hpp  config.hpp  global_configs.hpp  main_mode_switch.hpp  switches_zerodim.hpp  user_homotopy.hpp
core/include/bertini2/common/: config.hpp  stream_enum.hpp
core/include/bertini2/detail/: configured.hpp  enable_permuted_arguments.hpp  events.hpp  is_template_parameter.hpp  observable.hpp  observer.hpp  singleton.hpp  typelist.hpp  visitable.hpp  visitor.hpp
core/include/bertini2/endgames/: amp_endgame.hpp  base_endgame.hpp  cauchy.hpp  config.hpp  events.hpp  fixed_prec_endgame.hpp  interpolation.hpp  observers.hpp  powerseries.hpp  prec_base.hpp
core/include/bertini2/function_tree/: forward_declares.hpp  node.hpp  simplify.hpp
core/include/bertini2/io/: file_utilities.hpp  generators.hpp  parsing.hpp  splash.hpp
core/src/basics/: have_bertini.cpp  random.cpp
core/src/blackbox/: algorithm_builder.cpp  argc_argv.cpp  main_mode_switch.cpp
core/src/function_tree/: linear_product.cpp  node.cpp  simplify.cpp  special_number.cpp
core/src/parallel/: initialize_finalize.cpp  parallel.cpp
core/src/system/: precon.cpp  start_base.cpp  straight_line_program.cpp  system.cpp
core/test/: available_tests.txt
core/test/blackbox/: blackbox.cpp  parsing.cpp  user_homotopy.cpp  zerodim.cpp
core/test/classes/: boost_multiprecision_test.cpp  class_test.cpp  complex_test.cpp  differentiate_test.cpp  differentiate_wrt_var.cpp  eigen_test.cpp  function_tree_test.cpp  function_tree_transform.cpp  fundamentals_test.cpp  homogenization_test.cpp  m_hom_start_system.cpp  node_serialization_test.cpp  patch_test.cpp  slice_test.cpp  slp_test.cpp  start_system_test.cpp  system_test.cpp
core/test/classic/: classic_parsing_test.cpp  classic_test.cpp
core/test/endgames/: amp_cauchy_test.cpp  amp_powerseries_test.cpp  endgames_test.cpp  fixed_double_cauchy_test.cpp  fixed_double_powerseries_test.cpp  fixed_multiple_cauchy_test.cpp  fixed_multiple_powerseries_test.cpp  generic_cauchy_test.hpp  generic_interpolation.hpp  generic_pseg_test.hpp  interpolation.cpp
core/test/generating/: double.cpp  generating_test.cpp  mpfr_complex.cpp  mpfr_float.cpp  std_complex.cpp
core/test/nag_algorithms/: nag_algorithms_test.cpp  numerical_irreducible_decomposition.cpp  trace.cpp  zero_dim.cpp
core/test/nag_datatypes/: nag_datatypes_test.cpp  numerical_irreducible_decomposition.cpp  witness_set.cpp
core/test/pools/: pool_test.cpp
core/test/settings/: settings_test.cpp
core/test/tracking_basics/: amp_criteria_test.cpp  amp_tracker_test.cpp  corrector_test.m  euler_test.cpp  fixed_precision_tracker_test.cpp  heun_test.cpp  higher_predictor_test.cpp  newton_correct_test.cpp  path_observers.cpp  predictor_test.m  tracking_basics_test.cpp
core/test/utility/: enable_logging.hpp  io_test.cpp  observer_pattern_test.cpp  utility_test.cpp
python/: CMakeLists.txt  pyproject.toml  setup.py  z___setup.py
python/bertini/: __init__.py  _version.py  windows_dll_manager.py
python/bertini/algorithms/: __init__.py  zerodim.py
python/bertini/container/: __init__.py
python/bertini/endgame/: __init__.py
python/bertini/function_tree/: __init__.py
python/bertini/logging/: __init__.py
python/bertini/multiprec/: __init__.py
python/bertini/nag_algorithm/: __init__.py
python/bertini/parse/: __init__.py
python/bertini/random/: __init__.py
python/bertini/system/: __init__.py
python/bertini/tracking/: __init__.py
python/docs/source/: conf.py  index.rst  intro.rst  welcome.rst
python/examples/: eigen_in_python.py  endgame.py  evaluate_system.py  finding_issue.py  make_and_print.py  performance.py  solve_system.py  track_path_constructed_homotopy.py
python/include/: bertini_python.hpp  endgame_export.hpp  logging.hpp
python/plain_testing_scripts/: multiprec.py
python/src/: logging.cpp  mpfr_export.cpp
python/test/: test_all.py
python/test/classes/: container_test.py  differentiation_test.py  eigenpy_numpy.py  function_tree_test.py  logging_test.py  mpfr_test.py  multiprec_extended_test.py  parse_extended_test.py  parser_test.py  random_test.py  system_extended_test.py  system_test.py  test_classes.py
python/test/tracking/: amptracking_test.py  config_test.py  endgame_test.py  observer_test.py  test_tracking.py
python/test/zero_dim/: basics.py
python/timing/: timing1.py
python/todo/: example_python.rst
python_bindings/: CMakeLists.txt
python_bindings/include/: bertini_python.hpp  containers_export.hpp  detail.hpp  eigenpy_interaction.hpp  endgame_export.hpp  endgame_observers.hpp  function_tree_export.hpp  generic_observable.hpp  generic_observer.hpp  info.hpp  logging.hpp  mpfr_export.hpp  node_export.hpp  operator_export.hpp  parser_export.hpp  python_common.hpp  random_export.hpp  root_export.hpp  symbol_export.hpp  system_export.hpp  tracker_export.hpp  tracker_observers.hpp  zero_dim_export.hpp
python_bindings/src/: bertini_python.cpp  containers.cpp  detail.cpp  eigenpy_interaction.cpp  endgame_export.cpp  endgame_observers.cpp  function_tree.cpp  generic_observable.cpp  generic_observer.cpp  info.cpp  logging.cpp  mpfr_export.cpp  node_export.cpp  operator_export.cpp  parser_export.cpp  root_export.cpp  symbol_export.cpp  system_export.cpp  tracker_export.cpp  tracker_observers.cpp  zero_dim_export.cpp
recipe/: meta.yaml
unittest/: CMakeLists.txt  class_test.cpp  matrix.cpp
unittest/python/: test_matrix.py
(+121 files in other folders)
