[project]
name = "pybertini"
version = "1.0a7"
requires-python = ">= 3.11"
readme = "python/README.rst"
dependencies = ["numpy","eigenpy"]
authors = [
    {name="Bertini Team"}
]
maintainers=[
    {name="silviana amethyst", email="amethyst@mpi-cbg.de"}
]
description = "Software for numerical algebraic geometry"

[project.optional-dependencies]
test = ["pytest"]

[project.urls]
Repository = "https://github.com/bertiniteam/b2"

[build-system]
requires = [
    "scikit-build-core","numpy"
]
build-backend = "scikit_build_core.build"

[tool.scikit-build]
wheel.packages = ["python/bertini"]
wheel.expand-macos-universal-tags = true
wheel.install-dir = "bertini"
build-dir = "bld/"

